--- a/QuoteGenerator/Views/Home/Index.cshtml
+++ b/QuoteGenerator/Views/Home/Index.cshtml
@@ -15,10 +15,15 @@
     <div class="text-center">
         <h1>@ViewBag.Quote</h1>
 
+        <button type="button" class="btn btn-primary" onclick="GetNewQuote()"><i class="fas fa-quote-right"></i>
+            Get New Quote
+        </button>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-envelope"></i>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <i class="fas fa-envelope"></i>
             Email
         </button>
+
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
@@ -43,6 +48,11 @@
                 </div>
             </div>
         </div>
+        <script>
+            function GetNewQuote() {
+                location.reload();
+            }
+        </script>
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 </body>
